Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132490

Android and TestNamespace: errors in Qt JNI methods

XMLWordPrintable

    • Android
    • d16944762 (dev), d31a94a70 (6.9), 6e2ae09b5 (6.8), 60acb5e9a (dev), 2affad3ea (6.10), d4a5c769e (6.9), 9c8f8865c (tqtc/lts-6.8)
    • 2025wk06s1QtforAndroid, 2025wk34s2QtforAndroid

      There are plans to add an Android target to Coin that checks namespace functionality with configure argument:

      -qtnamespace TestNamespace 

      This causes an error in qtbase build in all Android targets, Coin run:
      https://coin.ci.qt.io/coin/integration/qt/qt5/tasks/web_qt_qt5_1734614440467
      Log:
      https://coin.ci.qt.io/coin/api/log/qt/qtbase/89665b375ecbaa90c85be188240ba8f2dd479043/LinuxRHEL_8_10x86_64AndroidAndroid_ANYx86_64GCCqtci-linux-RHEL-8.10-x86_64-51-920c26AndroidTestRun_Sccache_UseConfigure/2cfdd84314d1b107237f2e21d10d4b82e9bf4c18/build_1734617120/log.txt.gz

      /home/qt/work/qt/qtbase/tests/auto/corelib/kernel/qjnienvironment/tst_qjnienvironment.cpp:114:1: error: reference to 'QtJniMethods' is ambiguous

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            assam Assam Boudjelthia
            eltoivol Elias Toivola
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated: