Android: fix Q_JNI_NATIVE_METHOD() with namespace builds

Prepend the Qt namespace to the JNI method under Q_JNI_NATIVE_METHOD.

Pick-to: 6.8
Fixes: QTBUG-132490
Change-Id: I73bb8119a0d760e8f7ce82e70ced2684bec76eb0
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit d1694476271346d13ac8ca3138328d295bf403b4)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>